--- a/SlotTest/MahiGames/tsconfig.json
+++ b/SlotTest/MahiGames/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "module": "commonjs",
     "target": "es6",
-    "lib": ["es6"],
+    "lib": ["ES2016","DOM"],
     "sourceMap": true
   },
   "exclude": [
