Now packing properly for system.js (system-lite)

--- a/SlotTest/MahiGames/package.json
+++ b/SlotTest/MahiGames/package.json
@@ -13,5 +13,8 @@
   "devDependencies": {
     "@types/node": "^8.0.14",
     "typescript": "^3.2.2"
+  },
+  "dependencies": {
+    "system-lite": "^1.1.0"
   }
 }
