--- a/SlotTest/MahiGames/tsconfig.json
+++ b/SlotTest/MahiGames/tsconfig.json
@@ -1,9 +1,11 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
     "target": "es6",
-    "lib": ["ES2016","DOM"],
-    "sourceMap": true
+    /* "lib": [ "ES2016", "DOM" ],*/
+    "sourceMap": true,
+    "esModuleInterop": true, 
+    "out": "application.js",
+    "module": "system"
   },
   "exclude": [
     "node_modules"
