--- a/SlotTest/MahiGames/tsconfig.json
+++ b/SlotTest/MahiGames/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "es6",
-    /* "lib": [ "ES2016", "DOM" ],*/
+    "lib": [ "ES2016", "DOM" ],
     "sourceMap": true,
     "esModuleInterop": true, 
     "out": "application.js",
